--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>wavefunctioncollapse</name>
+	<name>wavefunctioncollapse-WFC-Reimplementation</name>
 	<comment>Project wavefunctioncollapse created by Buildship.</comment>
 	<projects>
 	</projects>
